# try_python

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  404.html  CNAME  Dockerfile  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: SECRETS.md  dependabot.yml  pull_request_template.md
.github/environments/: production.yml
.github/workflows/: ci.yml  dependencies.yml  release.yml
CHANGELOG/: index.html
CODE_OF_CONDUCT/: index.html
api/: index.html
architecture/: index.html
contributing/: index.html
deployment/: index.html
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  api.md  architecture.md  contributing.md  deployment.md  index.md  installation.md  tests.md  usage.md
installation/: index.html
scripts/: validate-ci.sh
search/: search_index.json
tests/: index.html  test_api.py  test_config.py  test_logger.py  test_models.py  test_repository.py  test_service.py  test_webapp.py
todo_app/: api.py  config.py  logger.py  models.py  repository.py  service.py  webapp.py
usage/: index.html
