[project]
name = "todo-list-best-practices"
version = "0.1.0"
description = "Exemple pédagogique: todo list en Python avec bonnes pratiques"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[project.dependencies]
fastapi = "^0.99.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
streamlit = "^1.30.0"
pydantic = "^1.10.13"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
loguru = "^0.7.0"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
    "flake8",
    "black",
    "mkdocs",
    "mkdocs-material",
]

[build-system]
requires = ["hatchling>=1.15"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/todo_app/__init__.py"

[tool.hatch.envs.default]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "streamlit",
    "pydantic",
    "python-dotenv",
    "requests",
    "loguru",
]

tasks.start-api = "uvicorn todo_app.api:app --host 0.0.0.0 --port 8000 --reload"
tasks.start-web = "streamlit run src/todo_app/webapp.py"